@@ -753,7 +753,8 @@ or
         [--print-library-src]
         [--print-symbols]
         [--print-tex-encodings]
-        [--print-xtherion-src]|
+        [--print-xtherion-src]
+        [--reproducible-output]|
 
 \penalty-200
 \arguments
@@ -816,6 +817,11 @@ or
 * |--print-symbols| =
         Print a list of all therion supported map symbols in
         |symbols.xhtml| file.
+
+* |--reproducible-output| =
+        Produce reproducible output PDF and SVG files.
+        No volatile information is included (e.g. creation date or software
+        version).
 
 * |-s <source-file>| =
         Set the name of the source file.
