@@ -44,6 +44,7 @@ enum {
   THPS_EXTERN_LIBS = 1006,  ///< Use extern libraries
   THPS_TEX_ENCODINGS = 1007,  ///< Print tex encodings
   THPS_SYMBOLS = 1008,  ///< Print symbols
+  THPS_REPRODUCIBLE = 1009,  ///< Produce reproducible output
 };
 
 
